--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
             header="Ricerca Serie TV"
             subheader="Trova la Serie che ami!"
             imgPath="assets\showcase\images\HomePage\Card\CardRicercaSerieTV.jpg"
-            body="Qui troverai un elenco di moltissime serie TV, dove potrai ricercare le tue preferite e avere tutte le informazioni che cerchi."
+            body="Qui troverai un elenco di moltissime serie TV, dove potrai ricercare le tue preferite e avere più informazioni."
             [isAdmin]="loggedCustomer.admin"
             leftButtonClick="filmStore/gestioneSerieTV"
             rightButtonClick="filmStore/ricercaSerieTV"
