--- a/src/app/pages/gestione-serie-tv/gestione-serie-tv.component.html
+++ b/src/app/pages/gestione-serie-tv/gestione-serie-tv.component.html
@@ -1,38 +1,36 @@
 <p-toast [style]="{marginTop: '80px'}" styleClass="error-toast" key="gestioneSerieTost"></p-toast>
 
-<div class="p-grid-col-12">
-  <div class="p-g">
-    <div class="p-g-2"></div>
-    <div class="p-g-8" style="text-align: center">
-      <h1>Gestione Serie TV</h1>
-    </div>
-    <div class="p-g-2">
-      <button type="button" pButton icon="fa fa-plus" (click)="addSerie()" label="Aggiungi Serie TV" style="margin-top: 1em;"></button>
-    </div>
+<div class="grid">
+  <div class="col-2"></div>
+  <div class="col-8" style="text-align: center">
+    <h1>Gestione Serie TV</h1>
+  </div>
+  <div class="col-2" style="margin-top: 1em;">
+    <button pButton type="button" class="p-button-info" (click)="addSerie()" style="justify-content: center">
+      Aggiungi Serie TV <fa-icon class="m-1" [icon]="faPlus"></fa-icon> </button>
   </div>
 </div>
 
 <!-- FILTRI DI RICERCA -->
-<div class="p-grid-col-12" style="padding-top: 1em;" style="text-align: center">
-  <div class="p-g">
-    <div class="p-g-4" style="padding-left: 10%;">
-      <div class="label"> Nome SerieTV </div>
-      <input film-input type="text" pInputText placeholder=" &#xF002; Nome" [(ngModel)]="filters.titleMsg" (input)="rt.filter($event.returnValue, 'nome', 'contains')">
-    </div>
-    <div class="p-g-4">
-      <div class="label">N° Stagioni SerieTV</div>
-      <input film-input type="text" pInputText placeholder=" &#xF002; Stagioni" [(ngModel)]="filters.stagioni" (input)="rt.filter($event.returnValue, 'stagioni.length', 'contains')">
-    </div>
-    <div film-button-third class="p-g-4 resetButton" style="padding-right: 10%;">
-      <button pButton type="button" label="Reset Filtri" (click)="reset(rt)" style="margin-top: 14px;"></button>
-    </div>
+<div class="grid" style="padding-left: 10%; padding-right: 10%;">
+  <div class="col-4"></div>
+  <div class="col-4">
+    <div class="label"> Nome SerieTV </div>
+    <span class="p-input-icon-left">
+      <i class="pi pi-search"></i>
+      <input film-input type="text" pInputText placeholder="Cerca mome" [(ngModel)]="filters.titleSerie"
+        (input)="applyFilter(rt, $event, 'nome', 'contains')">
+    </span>
+  </div>
+  <div film-button-third class="col-4 resetButton" style="padding-right: 10%;">
+    <button pButton type="button" label="Reset Filtri" (click)="reset(rt)" style="margin-top: 14px;"></button>
   </div>
 </div>
 
- <!-- TABELLA DELLE SERIE TV -->
-<div class="p-grid-col-12" style="padding-top: 2em; padding-left: 40%; padding-right: 40%">
-  <p-table setting-table [columns]="serieCols" #rt [value]="series" selectionMode="single" [(selection)]="serieSelezionata"
-    (onRowSelect)="onRowSerieSelect($event)" [rows]="50">
+<!-- TABELLA DELLE SERIE TV -->
+<div class="grid" style="padding-top: 2em; padding-left: 40%; padding-right: 40%">
+  <p-table setting-table [columns]="serieCols" #rt [value]="series" selectionMode="single"
+    [(selection)]="serieSelezionata" (onRowSelect)="onRowSerieSelect($event)" [rows]="50">
     <ng-template pTemplate="header" let-columns>
       <tr>
         <th *ngFor="let col of columns">
@@ -66,27 +64,29 @@
   </p-table>
 </div>
 
-<p-dialog header="Dettaglio Serie TV" [(visible)]="displayDialogSerie" [closable]="true" [responsive]="true" [modal]="true"
-  [positionTop]="50">
+<p-dialog header="Dettaglio Serie TV" [(visible)]="displayDialogSerie" [closable]="true" [responsive]="true"
+  [modal]="true" [positionTop]="50" [style]="{width: '50vw'}">
   <form name="form" #fSerie="ngForm">
-    <div class="p-g p-fluid" *ngIf="singolaSerie" style="padding-bottom: 2em">
-      <div class="p-g-12">
-        <div class="p-g-3">
+    <div class="col p-fluid" *ngIf="singolaSerie" style="padding-bottom: 2em">
+      <div class="grid">
+        <div class="col-2" style="margin-top: 12px;">
           <label>Titolo Serie TV:</label>
         </div>
-        <div class="p-g-9" *ngIf="newSerie">
-            <input pInputText id="titolo" name="titolo" [(ngModel)]="singolaSerie.nome" style="width: 100%" />
-          </div>
-        <div class="p-g-3" *ngIf="!newSerie">
-            <input pInputText id="titolo" name="titolo" [(ngModel)]="singolaSerie.nome" style="width: 100%" />
-          </div>
-        <div class="p-g-6" style="text-align: right" *ngIf="!newSerie">
-            <button type="button" style="width: 50%" pButton icon="fa fa-plus" (click)="addStagione()" label="Aggiungi Stagione"></button>
-          </div>
+        <div class="col-10" *ngIf="newSerie">
+          <input pInputText id="titolo" name="titolo" [(ngModel)]="singolaSerie.nome" style="width: 100%" />
+        </div>
+        <div class="col-10" *ngIf="!newSerie">
+          <input pInputText id="titolo" name="titolo" [(ngModel)]="singolaSerie.nome" style="width: 100%" />
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4" style="text-align: center; padding-bottom: 2em;" *ngIf="!newSerie">
+          <button pButton type="button" (click)="addStagione()" style="justify-content: center">
+            Aggiungi Stagione <fa-icon class="m-1" [icon]="faPlus"></fa-icon> </button>
+        </div>
       </div>
 
       <!-- TABELLA DELLE STAGIONI -->
-      <div class="p-grid-col-12" style="padding-top: 1em;" style="text-align: center" *ngIf="!newSerie">
+      <div style="padding-top: 1em;" style="text-align: center" *ngIf="!newSerie">
         <p-table [columns]="stagioneCols" sortField="numeroStagione" #rt [value]="stagioni" selectionMode="single"
           [(selection)]="stagioneSelezionata" (onRowSelect)="onRowStagioneSelect($event)" [rows]="50">
           <ng-template pTemplate="caption">
@@ -118,27 +118,31 @@
         </p-table>
       </div>
 
-      <div *ngIf="!newSerie && !singolaSerie.locandina" class="p-g-12" style="text-align: center">
-        <p-fileUpload name="serieLocandina" [url]="postPathSerie" (onUpload)="successfulUploadSerieLocandina()" (onError)="errorUploadSerieLocandina()"
-          chooseLabel="Scegli Locandina" uploadLabel="Carica Locandina" cancelLabel="Cancella" accept="image/*">
+      <div *ngIf="!newSerie && !singolaSerie.locandina" class="col-12" style="text-align: center">
+        <p-fileUpload name="serieLocandina" [url]="postPathSerie" (onUpload)="successfulUploadSerieLocandina()"
+          (onError)="errorUploadSerieLocandina()" chooseLabel="Scegli Locandina" uploadLabel="Carica Locandina"
+          cancelLabel="Cancella" accept="image/*">
         </p-fileUpload>
       </div>
-      <div *ngIf="!newSerie && singolaSerie.locandina" class="p-g-6 p-g-offset-3" style="text-align: center">
-        <button type="button" pButton class="p-button-info" icon="fa fa-trash-o" (click)="deleteLocandinaSerie()"
-          label="Elimina Locandina"></button>
+      <div *ngIf="!newSerie && singolaSerie.locandina" class="col-6 col-offset-3" style="text-align: center">
+        <button pButton type="button" class="p-button-warning" (click)="deleteLocandinaSerie()" style="justify-content: center">
+          Elimina Locandina <fa-icon class="m-1" [icon]="faTresh"></fa-icon> </button>
       </div>
 
     </div>
     <p-footer>
-      <div class="p-dialog-buttonpane p-helper-clearfix" style="text-align: center">
-        <div class="p-g-6" *ngIf="!newSerie">
-          <button type="button" pButton class="p-button-danger" icon="fa fa-trash-o" (click)="deleteSerie()" label="Elimina Serie TV"></button>
+      <div class="grid p-dialog-buttonpane p-helper-clearfix" style="text-align: center">
+        <div class="col-6" *ngIf="!newSerie">
+          <button pButton type="button" class="p-button-danger" (click)="deleteSerie()" style="justify-content: center">
+            Elimina Serie TV <fa-icon class="m-1" [icon]="faTresh"></fa-icon> </button>
         </div>
-        <div class="p-g-12" *ngIf="newSerie">
-          <button type="submit" pButton class="p-button-success" icon="fa fa-check" (click)="saveSerie()" label="Salva Serie TV"></button>
+        <div class="col-12" *ngIf="newSerie">
+          <button type="submit" pButton type="button" class="p-button-success" (click)="saveSerie()" style="justify-content: center">
+            Salva Serie TV <fa-icon class="m-1" [icon]="faCheck"></fa-icon> </button>
         </div>
-        <div class="p-g-6" *ngIf="!newSerie">
-          <button type="submit" pButton class="p-button-success" icon="fa fa-upload" (click)="saveSerie()" label="Aggiorna Serie TV"></button>
+        <div class="col-6" *ngIf="!newSerie">
+          <button type="submit" pButton type="button" class="p-button-success" (click)="saveSerie()" style="justify-content: center">
+            Aggiorna Serie TV <fa-icon class="m-1" [icon]="faUpload"></fa-icon> </button>
         </div>
       </div>
     </p-footer>
@@ -146,103 +150,106 @@
 </p-dialog>
 
 <!-- DIALOG AGGIUNGI STAGIONE -->
-<p-dialog header="Dettaglio Stagione" [(visible)]="displayDialogStagione" [closable]="true" [responsive]="true" [modal]="true"
-  [positionTop]="50" [contentStyle]="{'max-height':'80vh'}" [closeOnEscape]="true" [resizable]="false">
+<p-dialog header="Dettaglio Stagione" [(visible)]="displayDialogStagione" [closable]="true" [responsive]="true"
+  [modal]="true" [positionTop]="50" [contentStyle]="{'max-height':'80vh'}" [style]="{width: '50vw'}"
+  [closeOnEscape]="true" [resizable]="false">
   <form name="form" #fStagione="ngForm">
-    <div class="p-g p-fluid" *ngIf="singolaStagione">
-      <div class="p-g-12" style="text-align: center">
-        <h1 style="margin: 0%">Stagione N. {{singolaStagione.numeroStagione}}</h1>
+    <div class="grid p-fluid" *ngIf="singolaStagione">
+      <div class="col-12" style="text-align: center">
+        <h1 style="margin-bottom: 1em">Stagione {{singolaStagione.numeroStagione ? 'N.' + singolaStagione.numeroStagione : ''}}</h1>
       </div>
-      <div class="p-g-12">
-        <div class="p-g-3">
-          <label>Anno:</label>
-        </div>
-        <div class="p-g-3">
-          <p-inputMask id="anno" name="anno" mask="9999" [(ngModel)]="singolaStagione.anno" slotChar="AAAA"></p-inputMask>
-        </div>
-        <div class="p-g-3" style="text-align: center">
-          <label>Formato:</label>
-        </div>
-        <div class="p-g-3">
-          <p-dropdown [options]="formats" id="formato" name="formato" [(ngModel)]="singolaStagione.formato"></p-dropdown>
-        </div>
+      <div class="col-2">
+        <label>Anno:</label>
       </div>
-      <div class="p-g-12">
-        <div class="p-g-3">
-          <label>Lingua Audio:</label>
-        </div>
-        <div class="p-g-3">
-          <p-multiSelect name="audio" [options]="audios" [(ngModel)]="singolaStagione.linguaAudio" [panelStyle]="{minWidth:'12em'}">
-            <ng-template let-audio pTemplate="item">
-                <img src="assets/showcase/images/flags/{{audio.value}}.png" style="width:24px;display:inline-block;vertical-align:middle"/>
-                <div style="font-size:14px;float:right;margin-top:4px">{{audio.label}}</div>
-            </ng-template>
+      <div class="col-4">
+        <p-inputMask id="anno" name="anno" mask="9999" [(ngModel)]="singolaStagione.anno" slotChar="AAAA">
+        </p-inputMask>
+      </div>
+      <div class="col-2" style="text-align: center">
+        <label>Formato:</label>
+      </div>
+      <div class="col-4">
+        <p-dropdown [options]="formats" id="formato" name="formato" [(ngModel)]="singolaStagione.formato">
+        </p-dropdown>
+      </div>
+      <div class="col-2">
+        <label>Lingua Audio:</label>
+      </div>
+      <div class="col-4">
+        <p-multiSelect name="audio" [options]="audios" [(ngModel)]="singolaStagione.linguaAudio"
+          [panelStyle]="{minWidth:'12em'}">
+          <ng-template let-audio pTemplate="item">
+            <img src="assets/showcase/images/flags/{{audio.value}}.png"
+              style="width:24px;display:inline-block;vertical-align:middle" />
+            <div style="font-size:14px;float:right;margin-top:4px">{{audio.label}}</div>
+          </ng-template>
         </p-multiSelect>
-        </div>
-        <div class="p-g-3" style="text-align: center">
-          <label>Lingua Sottotitoli:</label>
-        </div>
-        <div class="p-g-3">
-          <p-multiSelect name="subtitle" [options]="audios" [(ngModel)]="singolaStagione.linguaSottotitoli" [panelStyle]="{minWidth:'12em'}" defaultLabel="-">
-            <ng-template let-subtitle pTemplate="item">
-                <img src="assets/showcase/images/flags/{{subtitle.value}}.png" style="width:24px;display:inline-block;vertical-align:middle"/>
-                <div style="font-size:14px;float:right;margin-top:4px">{{subtitle.label}}</div>
-            </ng-template>
+      </div>
+      <div class="col-2" style="text-align: center">
+        <label>Lingua Sottotitoli:</label>
+      </div>
+      <div class="col-4">
+        <p-multiSelect name="subtitle" [options]="audios" [(ngModel)]="singolaStagione.linguaSottotitoli"
+          [panelStyle]="{minWidth:'12em'}" defaultLabel="-">
+          <ng-template let-subtitle pTemplate="item">
+            <img src="assets/showcase/images/flags/{{subtitle.value}}.png"
+              style="width:24px;display:inline-block;vertical-align:middle" />
+            <div style="font-size:14px;float:right;margin-top:4px">{{subtitle.label}}</div>
+          </ng-template>
         </p-multiSelect>
-        </div>
       </div>
-      <div class="p-g-12">
-        <div class="p-g-3">
-          <label>N° Stagione:</label>
-        </div>
-        <div class="p-g-3">
-          <p-spinner [size]="30" id="numeroStagione" name="numeroStagione" [(ngModel)]="singolaStagione.numeroStagione"
-            [max]="100" [min]="1" [step]="1" style="width: 100%"></p-spinner>
-        </div>
-        <div class="p-g-3" style="text-align: center">
-          <label>N° Episodi:</label>
-        </div>
-        <div class="p-g-3">
-          <p-spinner [size]="30" id="numeroEpisodi" name="numeroEpisodi" [(ngModel)]="singolaStagione.numeroEpisodi"
-            [max]="10000" [min]="1" [step]="1" style="width: 100%"></p-spinner>
-        </div>
+      <div class="col-2">
+        <label>N° Stagione:</label>
       </div>
-      <div class="p-g-12">
-        <div class="p-g-3">
-          Puntate:
-        </div>
-        <div class="p-g-9">
-          <p-chips id="episodi" name="episodi" [(ngModel)]="singolaStagione.episodi"></p-chips>
-        </div>
+      <div class="col-4">
+        <p-inputNumber [(ngModel)]="singolaStagione.numeroStagione" id="numeroStagione" name="numeroStagione"
+          mode="decimal" [showButtons]="true" inputId="minmax-buttons" [min]="1" [max]="100">
+        </p-inputNumber>
       </div>
-      <div class="p-g-12">
-        <div class="p-g-3">
-          Trama:
-        </div>
-        <div class="p-g-9">
-          <textarea rows="1" id="trama" name="trama" pInputTextarea [(ngModel)]="singolaStagione.trama"></textarea>
-        </div>
+      <div class="col-2" style="text-align: center">
+        <label>N° Episodi:</label>
       </div>
-      <div *ngIf="!newStagione && !singolaStagione.locandina" class="p-g-12" style="text-align: center">
-        <p-fileUpload name="stagioneLocandina" [url]="postPath" (onUpload)="successfulUpload()" (onError)="errorUpload()"
-          chooseLabel="Scegli Locandina" uploadLabel="Carica Locandina" cancelLabel="Cancella" accept="image/*">
+      <div class="col-4">
+        <p-inputNumber [(ngModel)]="singolaStagione.numeroEpisodi" id="numeroEpisodi" name="numeroEpisodi"
+          mode="decimal" [showButtons]="true" inputId="minmax-buttons" [min]="1" [max]="10000">
+        </p-inputNumber>
+      </div>
+      <div class="col-2">
+        Puntate:
+      </div>
+      <div class="col-10">
+        <p-chips id="episodi" name="episodi" [(ngModel)]="singolaStagione.episodi"></p-chips>
+      </div>
+      <div class="col-2">
+        Trama:
+      </div>
+      <div class="col-10">
+        <textarea rows="3" pInputTextarea [autoResize]="true" id="trama" name="trama" pInputTextarea [(ngModel)]="singolaStagione.trama"></textarea>
+      </div>
+      <div *ngIf="!newStagione && !singolaStagione.locandina" class="col-12" style="text-align: center">
+        <p-fileUpload name="stagioneLocandina" [url]="postPath" (onUpload)="successfulUpload()"
+          (onError)="errorUpload()" chooseLabel="Scegli Locandina" uploadLabel="Carica Locandina" cancelLabel="Cancella"
+          accept="image/*">
         </p-fileUpload>
       </div>
-      <div *ngIf="!newStagione && singolaStagione.locandina" class="p-g-6 p-g-offset-3" style="text-align: center">
-        <button type="button" pButton class="p-button-info" icon="fa fa-trash-o" (click)="deleteLocandina()"
-          label="Elimina Locandina"></button>
+      <div *ngIf="!newStagione && singolaStagione.locandina" class="col-6 col-offset-3" style="text-align: center; padding-bottom: 1em;">
+        <button pButton type="button" class="p-button-warning" (click)="deleteLocandina()" style="justify-content: center">
+          Elimina Locandina <fa-icon class="m-1" [icon]="faTresh"></fa-icon> </button>
       </div>
     </div>
     <p-footer>
-      <div class="p-dialog-buttonpane p-helper-clearfix" style="text-align: center">
-        <div class="p-g-6" *ngIf="!newStagione">
-          <button type="button" pButton class="p-button-danger" icon="fa fa-trash-o" (click)="deleteStagione()" label="Elimina Stagione"></button>
+      <div class="grid p-dialog-buttonpane p-helper-clearfix" style="text-align: center">
+        <div class="col-6" *ngIf="!newStagione">
+          <button pButton type="button" class="p-button-danger" (click)="deleteStagione()" style="justify-content: center">
+            Elimina Stagione <fa-icon class="m-1" [icon]="faTresh"></fa-icon> </button>
         </div>
-        <div class="p-g-12" *ngIf="newStagione">
-          <button type="submit" pButton class="p-button-success" icon="fa fa-check" (click)="saveStagione()" label="Salva Stagione"></button>
+        <div class="col-12" *ngIf="newStagione">
+          <button type="submit" pButton type="button" class="p-button-success" (click)="saveStagione()" style="justify-content: center">
+            Salva Stagione <fa-icon class="m-1" [icon]="faCheck"></fa-icon> </button>
         </div>
-        <div class="p-g-6" *ngIf="!newStagione">
-          <button type="submit" pButton class="p-button-success" icon="fa fa-upload" (click)="saveStagione()" label="Aggiorna Stagione"></button>
+        <div class="col-6" *ngIf="!newStagione">
+          <button type="submit" pButton type="button" class="p-button-success" (click)="saveStagione()" style="justify-content: center">
+            Aggiorna Stagione <fa-icon class="m-1" [icon]="faUpload"></fa-icon> </button>
         </div>
       </div>
     </p-footer>
@@ -252,12 +259,13 @@
 
 <p-confirmDialog #cd>
   <p-footer>
-    <div class="p-dialog-buttonpane p-helper-clearfix">
-        <div class="p-g-3" style="text-align: right">
+    <div class="grid p-dialog-buttonpane p-helper-clearfix">
+      <div class="col-1"></div>
+      <div class="col-3" style="text-align: right">
         <button type="button" pButton icon="pi pi-times" label="No" (click)="cd.reject()"></button>
       </div>
-      <div class="p-g-6"></div>
-      <div class="p-g-3">
+      <div class="col-4"></div>
+      <div class="col-3">
         <button type="button" pButton icon="pi pi-check" label="Si" (click)="cd.accept()"></button>
       </div>
     </div>
