--- a/src/app/pages/ricerca-film/ricerca-film.component.html
+++ b/src/app/pages/ricerca-film/ricerca-film.component.html
@@ -8,59 +8,60 @@
 </div>
 
 <!-- FILTRI DI RICERCA -->
-<div class="p-grid-col-12" style="padding-left: 5%; padding-right: 5%;">
-  <div class="p-g">
-    <div class="p-g-12 p-md-4 p-lg-2" style="padding-left: 0px">
-      <div class="label"> Nome Film </div>
-      <input film-input type="text" pInputText placeholder=" &#xF002; Nome" [(ngModel)]="filters.titleMsg"
-        (input)="ft.filter($event.returnValue, 'nome', 'contains')">
-    </div>
-    <div class="p-g-12 p-md-4 p-lg-2">
-      <div class="label"> Formato Film </div>
-      <p-multiSelect [filter]="false" [showToggleAll]="false" [showHeader]="false" [panelStyle]="{minWidth:'12em'}"
-        [options]="formats" [(ngModel)]="filters.format" (onChange)="ft.filter($event.value, 'formato', 'in')">
-        <ng-template let-value pTemplate="selectedItems">
-          <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
-            <span>{{val}}</span>
-          </div>
-          <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all"><i
-              class="fa fa-search" aria-hidden="true" style="margin-right: 5px"></i>Formato</span>
-        </ng-template>
-      </p-multiSelect>
-    </div>
-    <div class="p-g-12 p-md-4 p-lg-2">
-      <div class="label"> Categoria Film </div>
-      <p-multiSelect [filter]="false" [showToggleAll]="false" [showHeader]="false" [panelStyle]="{minWidth:'12em'}"
-        [options]="category" [(ngModel)]="filters.category" (onChange)="findForCategory($event.value, ft)">
-        <ng-template let-value pTemplate="selectedItems">
-          <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
-            <img src="./../../assets/showcase/images/categorie/{{val}}.png"
-              style="width:20px;vertical-align:middle;margin-right:.5em" />
-            <span>{{val}}</span>
-          </div>
-          <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all"><i
-              class="fa fa-search" aria-hidden="true" style="margin-right: 5px"></i>Categoria</span>
-        </ng-template>
-        <ng-template let-cat pTemplate="item">
-          <img src="./../../assets/showcase/images/categorie/{{cat.label}}.png"
-            style="width:24px;display:inline-block;vertical-align:middle" />
-          <div style="font-size:14px;float:right;margin-top:4px">{{cat.label}}</div>
-        </ng-template>
-      </p-multiSelect>
-    </div>
-    <div class="p-g-12 p-md-6 p-lg-4">
-      <div class="label" style="text-align: center; font-family: FontAwesome;"> &#xF002; Film dal {{yearFilter ||
-        minYear}} al {{maxYear}} </div>
-      <p-slider [style]="{'width':'80%','margin-top':'14px','margin-left':'10%'}" [(ngModel)]="yearFilter"
-        [min]="minYear" [max]="maxYear" (onChange)="onYearChange($event, ft)"></p-slider>
-    </div>
-    <div film-button-third class="p-g-12 p-md-6 p-lg-2 resetButton" style="text-align: right; padding-right: 0px;">
-      <button pButton type="button" label="Reset Filtri" (click)="reset(ft)" style="margin-top: 14px;"></button>
-    </div>
+<div class="grid" style="padding-left: 5%; padding-right: 5%;">
+  <div class="col-12 md:col-4 lg:col-2" style="padding-left: 0px">
+    <div class="label"> Nome Film </div>
+      <span class="p-input-icon-left">
+        <i class="pi pi-search"></i>
+        <input film-input type="text" pInputText placeholder="Cerca mome" [(ngModel)]="filters.titleSerie"
+          (input)="applyFilter(ft, $event, 'nome', 'contains')">
+      </span>
+  </div>
+  <div class="col-12 md:col-4 lg:col-3" style="text-align: center;">
+    <div class="label"> Formato Film </div>
+    <p-multiSelect [filter]="false" [showToggleAll]="false" [showHeader]="false" [panelStyle]="{minWidth:'12em'}"
+      [options]="formats" [(ngModel)]="filters.format" (onChange)="ft.filter($event.value, 'formato', 'in')">
+      <ng-template let-value pTemplate="selectedItems">
+        <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
+          <span>{{val}}</span>
+        </div>
+        <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all"><i
+            class="fa fa-search" aria-hidden="true" style="margin-right: 5px"></i>Formato</span>
+      </ng-template>
+    </p-multiSelect>
+  </div>
+  <div class="col-12 md:col-4 lg:col-3" style="text-align: center;">
+    <div class="label"> Categoria Film </div>
+    <p-multiSelect [filter]="false" [showToggleAll]="false" [showHeader]="false" [panelStyle]="{minWidth:'12em'}"
+      [options]="category" [(ngModel)]="filters.category" (onChange)="findForCategory($event.value, ft)">
+      <ng-template let-value pTemplate="selectedItems">
+        <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
+          <img src="./../../assets/showcase/images/categorie/{{val}}.png"
+            style="width:20px;vertical-align:middle;margin-right:.5em" />
+          <span>{{val}}</span>
+        </div>
+        <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all"><i
+            class="fa fa-search" aria-hidden="true" style="margin-right: 5px"></i>Categoria</span>
+      </ng-template>
+      <ng-template let-cat pTemplate="item">
+        <img src="./../../assets/showcase/images/categorie/{{cat.label}}.png"
+          style="width:24px;display:inline-block;vertical-align:middle" />
+        <div style="font-size:14px;float:right;margin-top:4px">{{cat.label}}</div>
+      </ng-template>
+    </p-multiSelect>
+  </div>
+  <div class="col-12 md:col-6 lg:col-3">
+    <div class="label" style="text-align: center; font-family: FontAwesome;"> Film dal {{yearFilter ||
+      minYear}} al {{maxYear}} </div>
+    <p-slider [style]="{'width':'80%','margin-top':'14px','margin-left':'10%'}" [(ngModel)]="yearFilter"
+      [min]="minYear" [max]="maxYear" (onChange)="onYearChange($event, ft)"></p-slider>
+  </div>
+  <div film-button-third class="col-12 md:col-6 lg:col-1 resetButton" style="text-align: right; padding-right: 0px;">
+    <button pButton type="button" label="Reset Filtri" (click)="reset(ft)" style="margin-top: 14px;"></button>
   </div>
 </div>
 
-<div class="p-grid-col-12" style="padding-left: 5%; padding-right: 5%; padding-top: 3em;">
+<div class="col-12" style="padding-left: 5%; padding-right: 5%; padding-top: 3em;">
   <p-table film-table [columns]="cols" [value]="films" #ft [paginator]="true" [rows]="10"
     [rowsPerPageOptions]="[5,10,25,50]">
     <ng-template pTemplate="colgroup" let-columns>
@@ -105,7 +106,10 @@
           <span *ngIf="!rowData.linguaSottotitoli"> - </span>
         </td>
         <td>
-          <p-button icon="fa fa-file-video-o" title="Visualizza Dettagli" (onClick)="goToFilm(rowData._id || rowData.id)"></p-button>
+          <button pButton type="button" title="Visualizza Dettagli"
+            (click)="goToFilm(rowData._id || rowData.id)">
+            <fa-icon class="m-1" [icon]="faSearch"></fa-icon>
+          </button>
         </td>
       </tr>
     </ng-template>
