--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ body.backImage {
   [film-input] {
     font-size: 16px;
     height: 40px;
-    width: 85%;
+    width: 100%;
     max-width: 240px;
     border: 1px solid darkgrey;
     border-radius: 2px;
@@ -94,6 +94,10 @@ body.backImage {
   .ui-dataview .ui-dataview-header {
     padding: 0em !important;
     border: none !important;
+  }
+
+  .p-fluid .p-fileupload .p-button {
+    width: inherit !important;
   }
   
   [film-fieldset] {
@@ -180,61 +184,6 @@ body.backImage {
             text-align: center;
             color: black;
           }
-        }
-      }
-    }
-  }
-  
-  .ui-multiselect {
-    width: 85%;
-  }
-  
-  [sdc-multiselect] {
-    .ui-multiselect {
-      min-Width: 12em;
-      width: 85%;
-      height: 32px;
-      max-width: 240px;
-      width: 100%;
-      border-radius: 2px;
-      border: 1px solid darkgray;
-  
-      .ui-state-highlight {
-        background-color: lightblue;
-      }
-  
-      .ui-multiselect-label {
-        color: #000000;
-        font-family: 'Lato', sans-serif, FontAwesome;
-        text-align: left;
-        font-size: 16px;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-      }
-  
-      .ui-multiselect-trigger {
-        height: 4px;
-        width: -22px;
-        border: white;
-        background-color: transparent;
-      }
-  
-      .ui-multiselect-trigger-icon {
-        visibility: hidden;
-      }
-  
-      &:hover {
-        background: darkblue;
-  
-        .ui-multiselect-label {
-          background: darkblue;
-          color: white;
-          font-family: 'Lato', sans-serif, FontAwesome;
-          font-size: 16px;
-        }
-  
-        .ui-multiselect-trigger {
-          color: white;
         }
       }
     }
