--- a/src/app/pages/ricerca-film/ricerca-film.component.html
+++ b/src/app/pages/ricerca-film/ricerca-film.component.html
@@ -1,69 +1,72 @@
-<p-blockUI [blocked]="blockedDocument">
-  <p-progressSpinner [style]="{width: '100px', height: '100px'}" strokeWidth="8" animationDuration=".5s"
-    class="centered"></p-progressSpinner>
-</p-blockUI>
-
+<p-toast [style]="{marginTop: '80px'}" styleClass="error-toast" key="filmListTost"></p-toast>
 <div>
   <h1 style="text-align: center">Elenco Film</h1>
 </div>
-
 <!-- FILTRI DI RICERCA -->
 <div class="grid" style="padding-left: 5%; padding-right: 5%;">
-  <div class="col-12 md:col-4 lg:col-2" style="padding-left: 0px">
-    <div class="label"> Nome Film </div>
+  <form [formGroup]="filmSearchFilterForm" style="display: contents">
+    <div class="col-12 md:col-4 lg:col-2" style="padding-left: 0px">
+      <h5 style="font-size: 1em;"> Nome Film </h5>
       <span class="p-input-icon-left">
         <i class="pi pi-search"></i>
-        <input film-input type="text" pInputText placeholder="Cerca mome" [(ngModel)]="filters.titleSerie"
-          (input)="applyFilter(ft, $event, 'nome', 'contains')">
+        <input type="text" pInputText placeholder="Cerca mome" [formControl]="filmNameAsyncInput">
+        <span style="margin-left:-20px;">
+      </span> 
       </span>
-  </div>
-  <div class="col-12 md:col-4 lg:col-3" style="text-align: center;">
-    <div class="label"> Formato Film </div>
-    <p-multiSelect [filter]="false" [showToggleAll]="false" [showHeader]="false" [panelStyle]="{minWidth:'12em'}"
-      [options]="formats" [(ngModel)]="filters.format" (onChange)="ft.filter($event.value, 'formato', 'in')">
-      <ng-template let-value pTemplate="selectedItems">
-        <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
-          <span>{{val}}</span>
-        </div>
-        <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all"><i
-            class="fa fa-search" aria-hidden="true" style="margin-right: 5px"></i>Formato</span>
-      </ng-template>
-    </p-multiSelect>
-  </div>
-  <div class="col-12 md:col-4 lg:col-3" style="text-align: center;">
-    <div class="label"> Categoria Film </div>
-    <p-multiSelect [filter]="false" [showToggleAll]="false" [showHeader]="false" [panelStyle]="{minWidth:'12em'}"
-      [options]="category" [(ngModel)]="filters.category" (onChange)="findForCategory($event.value, ft)">
-      <ng-template let-value pTemplate="selectedItems">
-        <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
-          <img src="./../../assets/showcase/images/categorie/{{val}}.png"
-            style="width:20px;vertical-align:middle;margin-right:.5em" />
-          <span>{{val}}</span>
-        </div>
-        <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all"><i
-            class="fa fa-search" aria-hidden="true" style="margin-right: 5px"></i>Categoria</span>
-      </ng-template>
-      <ng-template let-cat pTemplate="item">
-        <img src="./../../assets/showcase/images/categorie/{{cat.label}}.png"
-          style="width:24px;display:inline-block;vertical-align:middle" />
-        <div style="font-size:14px;float:right;margin-top:4px">{{cat.label}}</div>
-      </ng-template>
-    </p-multiSelect>
-  </div>
-  <div class="col-12 md:col-6 lg:col-3">
-    <div class="label" style="text-align: center; font-family: FontAwesome;"> Film dal {{yearFilter ||
-      minYear}} al {{maxYear}} </div>
-    <p-slider [style]="{'width':'80%','margin-top':'14px','margin-left':'10%'}" [(ngModel)]="yearFilter"
-      [min]="minYear" [max]="maxYear" (onChange)="onYearChange($event, ft)"></p-slider>
-  </div>
-  <div film-button-third class="col-12 md:col-6 lg:col-1 resetButton" style="text-align: right; padding-right: 0px;">
-    <button pButton type="button" label="Reset Filtri" (click)="reset(ft)" style="margin-top: 14px;"></button>
-  </div>
+    </div>
+    <div class="col-12 md:col-4 lg:col-3" style="padding-left: 0px">
+      <h5 style="font-size: 1em;"> Formato Film </h5>
+      <p-multiSelect [filter]="false" [showToggleAll]="false" defaultLabel=" &#xF002; Cerca Formato"
+        [showHeader]="false" [panelStyle]="{minWidth:'12em'}" [options]="formats">
+        <ng-template let-value pTemplate="selectedItems">
+          <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
+            <span>{{val}}</span>
+          </div>
+          <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all">
+            <i class="pi pi-search" style="margin-right: 1em;"></i>
+            Cerca Formato
+          </span>
+        </ng-template>
+      </p-multiSelect>
+    </div>
+    <div class="col-12 md:col-4 lg:col-3" style="padding-left: 0px">
+      <h5 style="font-size: 1em;"> Categoria Film </h5>
+      <p-multiSelect [filter]="false" [showToggleAll]="false" defaultLabel="Cerca Categoria" [showHeader]="false"
+        [panelStyle]="{minWidth:'12em'}" [options]="category">
+        <ng-template let-value pTemplate="selectedItems">
+          <div *ngFor="let val of value" class="p-multiselected-item-token p-corner-all">
+            <img src="./../../assets/showcase/images/categorie/{{val}}.png"
+              style="width:20px;vertical-align:middle;margin-right:.5em" />
+            <span>{{val}}</span>
+          </div>
+          <span *ngIf="!value || value.length === 0" class="p-multiselected-empty-token p-corner-all">
+            <i class="pi pi-search" style="margin-right: 1em;"></i>
+            Cerca Categoria
+          </span>
+        </ng-template>
+        <ng-template let-cat pTemplate="item">
+          <img src="./../../assets/showcase/images/categorie/{{cat.label}}.png"
+            style="width:24px;display:inline-block;vertical-align:middle" />
+          <div style="font-size:14px;float:right;margin-top:4px">{{cat.label}}</div>
+        </ng-template>
+      </p-multiSelect>
+    </div>
+    <div class="col-12 md:col-6 lg:col-3">
+      <div class="label" style="text-align: center; font-family: FontAwesome;"> Film dal {{yearFilter ||
+    minYear}} al {{maxYear}} </div>
+      <p-slider [style]="{'width':'80%','margin-top':'14px','margin-left':'10%'}"
+        [min]="minYear" [max]="maxYear"></p-slider>
+    </div>
+    <div film-button-third class="col-12 md:col-6 lg:col-1 resetButton" style="text-align: right; padding-right: 0px;">
+      <button pButton type="button" label="Reset Filtri" style="margin-top: 14px;"></button>
+    </div>
+  </form>
 </div>
-
 <div class="col-12" style="padding-left: 5%; padding-right: 5%; padding-top: 3em;">
-  <p-table film-table [columns]="cols" [value]="films" #ft [paginator]="true" [rows]="10"
-    [rowsPerPageOptions]="[5,10,25,50]">
+  <p-table [value]="films" [lazy]="true" (onLazyLoad)="loadFilms($event)" film-table [columns]="cols" #ft
+    [paginator]="!filterActivate && films?.length > 0" [rows]="10" [rowsPerPageOptions]="[5,10,25,50]" [totalRecords]="totalRecords"
+    [loading]="loading" [showCurrentPageReport]="!filterActivate && films?.length > 0"
+    currentPageReportTemplate="{first} di {last} dei {totalRecords} Film">
     <ng-template pTemplate="colgroup" let-columns>
       <colgroup>
         <col *ngFor="let col of columns">
@@ -101,13 +104,12 @@
             title="{{lingua}}">
         </td>
         <td>
-          <img *ngFor="let linguaSub of rowData.linguaSottotitoli" src="assets/showcase/images/flags/{{linguaSub}}.png"
-            title="{{linguaSub}}">
+          <img *ngFor="let linguaSub of rowData.linguaSottotitoli"
+            src="assets/showcase/images/flags/{{linguaSub}}.png" title="{{linguaSub}}">
           <span *ngIf="!rowData.linguaSottotitoli"> - </span>
         </td>
         <td>
-          <button pButton type="button" title="Visualizza Dettagli"
-            (click)="goToFilm(rowData._id || rowData.id)">
+          <button pButton type="button" title="Visualizza Dettagli" (click)="goToFilm(rowData._id || rowData.id)">
             <fa-icon class="m-1" [icon]="faSearch"></fa-icon>
           </button>
         </td>
@@ -122,7 +124,7 @@
     </ng-template>
     <ng-template pTemplate="summary">
       <span *ngIf="loadingComplete">
-          Film Torvati: {{this.table.filteredValue ? this.table.filteredValue.length : this.table.totalRecords }}
+        Film Torvati: {{this.table.filteredValue ? this.table.filteredValue.length : this.table.totalRecords }}
       </span>
     </ng-template>
   </p-table>
